# insurance-claim-ai

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
charts/claimpipe/: Chart.yaml  values.yaml
charts/claimpipe/templates/: _helpers.tpl  config.yaml  deployments.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: DEPLOY.md  DESIGN.md  VERIFY.md  index.html
migrations/: 001_init.sql  002_events.sql  003_adjudication.sql
scripts/: dev-refdata.json  dev_portal.sh  e2e_smoke.py
src/claimpipe/: __init__.py  __main__.py  adjudication.py  agent.py  claimtypes.py  config.py  customers.py  eventstore.py  llm.py  notifier.py  observability.py  projection.py  refdata.py  relay.py  repository.py  tenancy.py  tracing.py
src/claimpipe/adapters/: bus.py  intake.py  model_client.py  object_store.py  ocr.py  output.py
src/claimpipe/api/: app.py  main.py  schemas.py
src/claimpipe/api/static/: portal.html
src/claimpipe/domain/: events.py  models.py
src/claimpipe/temporal/: activities.py  worker.py  workflows.py
tests/: helpers.py  test_adjudication.py  test_agent.py  test_api.py  test_chaos.py  test_claimtypes.py  test_deploy.py  test_events.py  test_frontdoor.py  test_intake_output.py  test_llm.py  test_load.py  test_notify.py  test_ocr.py  test_ops.py  test_review.py  test_smoke.py  test_tenancy.py
